--- a/M3/static/snippets/header.css
+++ b/M3/static/snippets/header.css
@@ -1,5 +1,5 @@
 #searchBar {
-    background-image: url("../img/fontawesome-free-5.11.2-desktop/svgs/solid/search.svg");
+    background-image: url("../../img/fontawesome-free-5.11.2-desktop/svgs/solid/search.svg");
     background-repeat: no-repeat;
     background-position: 5px 5px;
     background-color: white;
